@@ -134,10 +134,10 @@ host_modules= { module= uudecode; };
 host_modules= { module= wdiff; };
 host_modules= { module= zip; no_check_cross=true; };
 host_modules= { module= zlib; no_install=true; no_check=true; bootstrap=true; };
-host_modules= { module= gdb; extra_make_flags="$(X11_FLAGS_TO_PASS)"; };
-host_modules= { module= expect; extra_make_flags="$(X11_FLAGS_TO_PASS)"; };
-host_modules= { module= guile; extra_make_flags="$(X11_FLAGS_TO_PASS)"; };
-host_modules= { module= tk; extra_make_flags="$(X11_FLAGS_TO_PASS)"; };
+host_modules= { module= gdb; };
+host_modules= { module= expect; };
+host_modules= { module= guile; };
+host_modules= { module= tk; };
 host_modules= { module= libtermcap; no_check=true; 
                 missing=mostlyclean;
                 missing=clean;
